# confingy

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.github/: release.yml
.github/workflows/: docs.yml  mypy.yml  publish.yml  pytest.yml  ruff.yml
docs/: diving_deeper.md  index.md
docs/api/: exceptions.md  fingy.md  mypy_plugin.md  serde.md  tracking.md
docs/api/cli/: main.md  serialize.md  transpile.md  viz.md
docs/api/utils/: hashing.md  imports.md  types.md
docs/examples/: dataloading.md  lens.md  post_config.md  pydantic_validation.md  training_loop.md  transpile_demo.md
examples/: dataloading.py  lens.py  post_config.py  pydantic_validation.py  test_config.json  training_loop.py  transpile_demo.py
src/confingy/: __init__.py  exceptions.py  fingy.py  mypy_plugin.py  serde.py  tracking.py
src/confingy/cli/: __init__.py  main.py  serialize.py  transpile.py  viz.py
src/confingy/utils/: hashing.py  imports.py  types.py
src/confingy/viz/: __init__.py  __main__.py  default_configs.py  graph.py  server.py
tests/: conftest.py  test_cli.py  test_exceptions.py  test_fingy.py  test_pydantic_dataclasses.py  test_serde.py  test_tracking.py  test_tracking_mypy.py
tests/utils/: test_hashing.py  test_imports.py  test_types.py
